changed z-index of navbar so it stays fixed on top over every component

--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -21,6 +21,7 @@
   position: fixed;
   top: 0;
   transition: .7s;
+  z-index: 100;
 }
 .branding {
   color: white;
